Prevent focus outline on last item from being cut off

--- a/source/03-components/mobile-menu/mobile-menu.scss
+++ b/source/03-components/mobile-menu/mobile-menu.scss
@@ -36,7 +36,7 @@ $mobile-menu-line-height: gesso-line-height(base);
   left: 0;
   max-height: 100vh;
   overflow-y: auto;
-  padding-top: 0;
+  padding-top: 4px;
   position: fixed;
   top: 0;
   width: 100%;
